@@ -36,6 +36,7 @@ Added
   used download directory.
 - New setting `storage -> prompt-download-directory` to download all downloads
   without asking.
+- Rapid hinting is now also possible for downloads.
 
 Changed
 ~~~~~~~
